refactor(network): rework network module, use new bytecodec module and introduce proper packet events